# benchinator

./: .gitlab-ci.yml  Cargo.toml  README.md  markdown  random_file_0.txt  random_file_1.txt  random_file_10.txt  random_file_11.txt  random_file_12.txt  random_file_13.txt  random_file_14.txt  random_file_15.txt  random_file_16.txt  random_file_17.txt  random_file_18.txt  random_file_19.txt  random_file_2.txt  random_file_20.txt  random_file_21.txt  random_file_22.txt  random_file_23.txt  random_file_24.txt  random_file_25.txt  random_file_26.txt  random_file_27.txt  random_file_28.txt  random_file_29.txt  random_file_3.txt  random_file_30.txt  random_file_31.txt  random_file_32.txt  random_file_33.txt  random_file_34.txt  random_file_35.txt  random_file_36.txt  random_file_37.txt  random_file_38.txt  random_file_39.txt  random_file_4.txt  random_file_40.txt  (+15 more)
.github/workflows/: build.yml  main.yml
src/: build_run_operations.rs  config.rs  csv_writer.rs  docker_operations.rs  download_operations.rs  file_operations.rs  git_operations.rs  main.rs  vscode.rs
