[package]
name = "benchmarker"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.6"
csv = "1.2.1"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11" }
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
native-dialog = "0.7.0"
